--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   php:
     build:
       context: ./docker/php
-    container_name: Sabrina_php
+    container_name: Gestion_php
     volumes:
       - ./src:/var/www/html
     ports:
-      - "8080:80"
+      - "8081:80"
     depends_on:
       - mysql
     networks:
@@ -16,10 +16,10 @@ services:
       
   mysql:
     image: mysql:8.0
-    container_name: Sabrina_mysql
+    container_name: Gestion_mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: Sabrina_db
+      MYSQL_DATABASE: Gestion_db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     volumes:
